--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 - sudo apt-get install -qq -y clang-3.6 clang-3.7 clang-3.8
 - sudo apt-get install -qq -y libsoil-dev libassimp-dev libglm-dev
 - sudo apt-get install -qq -y libglew-dev
+- sudo apt-get install -qq -y libeigen3-dev
 - sudo apt-get install -qq -y doxygen
 - sudo apt-get install -qq -y python-pip
 - sudo apt-get install -qq -y libboost-filesystem1.54-dev
